--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="book-detail">
 
-            <!-- <section class="book-area">
+            <section class="book-area">
               <div class="book-img">
                 <a href="https://www.amazon.co.jp/%E3%80%8C%E6%AD%BB%E3%80%8D%E3%81%A8%E3%81%AF%E4%BD%95%E3%81%8B-%E3%82%A4%E3%82%A7%E3%83%BC%E3%83%AB%E5%A4%A7%E5%AD%A6%E3%81%A723%E5%B9%B4%E9%80%A3%E7%B6%9A%E3%81%AE%E4%BA%BA%E6%B0%97%E8%AC%9B%E7%BE%A9-%E3%82%B7%E3%82%A7%E3%83%AA%E3%83%BC%E3%83%BB%E3%82%B1%E3%83%BC%E3%82%AC%E3%83%B3/dp/4866510773", target="_blank",rel="noopener noreferrer", class="book-link"><p>この商品についてamazonでチェック</p><img src="img/death.png" class="img", width="230px"></a>
               </div>
@@ -58,7 +58,7 @@
                         <h4>ホモ・デウス</h4>
                         <p>OH,Its so delicious! Well... so it is delicious. hey, ya, very veryveryvery delicious. Come on! Last tuseday, it is delicious.</p>
                       </div>
-                    </section> -->
+                    </section>
     
           </section>
         </main>
