--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scal=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>本の紹介</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+
     <header>
-      <div class="header-book">
+      <div class="container">
+        <div class="pic">
           <img src="img/header-img.jpeg">
+        </div>
+        <div class="message">
           <p>いい本に、出会う</p>
-        <!-- </div> -->
+        </div>
       </div>
     </header>
+    
     <main>
       <section class="int-area">
         <h1>人生を変えた本</h1>
